// $Id: CHANGELOG.txt,v 1.135 2010/07/27 18:56:35 alexb Exp $

Feeds 6.x 1.0 XXXXXXXXXXXXXXXXXX
--------------------------------

- #862444 pounard: Do not name files after their enclosure class.
- #851570 morningtime: Avoid trailing slashes when passing file paths to
  file_check_directory().
- #836090 andrewlevine, alex_b: Include mapping configuration in hash.
- #853156 alex_b: Support real updates of terms.
- #858684 alex_b: Fix notices when file not found.

Feeds 6.x 1.0 Beta 4, 2010-07-25
--------------------------------

- #838018-12 Remove Formatted Number CCK mapper, cannot be properly tested, see
  #857928.

Feeds 6.x 1.0 Beta 3, 2010-07-18
--------------------------------

- #854628 DanielJohnston, alex_b: Fix user processor assigns all roles.
- #838018 infojunkie: Mapper for Formatted Number CCK field.
- #856408 c.ex: Pass all $targets for hook_feeds_node_processor_targets_alter()
  by reference.
- #853194 andrewlevine, alex_b: Mapping: don't reset all targets.
- #853144 alex_b: Consistent use of "replace" vs "update".
- #850998 alex_b: Clean up file upload form. Note: If you supply file paths
  directly in the textfield rather than uploading them through the UI, you will
  have to adjust your importer's File Fetcher settings.
- #850652 alex_b: Make ParserCSV (instead of FeedsCSVParser) populate column
  names.
- #850638 alex_b: Introduce FeedsSource::preview().
- #850298 alex_b: ParserCSV: Support batching (only affects library, full parser
  level batch support to be added later with #744660).
- Minor cleanup of admin UI language and CSS.
- #647222 cglusky, jeffschuler: Specify input format for feed items.

Feeds 6.x 1.0 Beta 2, 2010-07-10
--------------------------------

- #753426 Monkey Master, andrewlevine, alex_b: Partial update of nodes.
- #840626 andrewlevine, alex_b: Support using same mapping target multiple
  times.
- #624464 lyricnz, alex_b: Fix to "support tabs as delimiters".